# cobol-ast-tests

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
ast-docs/: ast-for-endianness-oracle.md  intro-to-ast-parsers.md
cobol-docs/: COMP5_ORACLE_PROBLEM_EXPLAINED.md  ENDIANNESS_PROBLEM_EXPLAINED.md
prompts/: 01-create-claude-md.md  02-create-prompt-to-create-examples.md  03-create-endianness-examples.md  04-create-prompt-to-choose-python-ast-parser.md  05-choose-python-ast-parser.md  06-create-prompt-to-plan-implementation-ast-parser.md  07-plan-implementation-python-ast-parser.md  08-create-prompt-to-generate-intro-ast-docs.md  09-generate-intro-ast-docs.md  10-create-prompt-to-update-readme.md  11-generate-readme.md  12-implementation-step-1.md  13-implementation-step-2.md  14-implementation-step-3.md  15-implementation-step-4.md  16-implementation-step-5.md  17-implementation-step-6.md  18-implementation-step-7.md  19-implementation-step-8.md  20-implementation-step-9.md  21-implementation-step-10.md  22-implementation-step-11.md  23-implementation-step-12.md  24-implementation-step-13.md  25-add-line-number-to-ast-nodes.md  (+1 more)
python/: CLAUDE.md  README.md  pyproject.toml
python/ast-docs/: implementation-plan.md  parser-evaluation.md
python/grammar/: README.md
python/src/cobol_ast/: __init__.py  ast_nodes.py  parser.py  preprocessor.py  visitor.py
python/tests/: conftest.py  test_ast_nodes.py  test_integration.py  test_parser.py  test_preprocessor.py  test_scaffolding.py  test_source_location.py  test_visitor.py
(+6 files in other folders)
